clusters/platforms/authentik/templates/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-proto-headers
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-server
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.platform.the-lab.zone`)
      kind: Rule
      middlewares:
        - name: authentik-proto-headers
      services:
        - name: authentik-server
          port: 80
